// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Alert Danger 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 fjJeBB Alert-quomwu-0 biTsD"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 ueLpv nds-icon--error"
        fill="#cc1439"
        focusable="false"
        height="24px"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="Box-xda4ls-0 hoMyit"
      >
        Danger alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Alert Informative 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 jKA-DXi Alert-quomwu-0 biTsD"
      role="alert"
    >
      <div
        class="Box-xda4ls-0 hoMyit"
      >
        Informative alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Alert Success 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 ThnFz Alert-quomwu-0 biTsD"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 iOnHOk nds-icon--check"
        fill="#008059"
        focusable="false"
        height="24px"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <div
        class="Box-xda4ls-0 hoMyit"
      >
        Success alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Alert Warning 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 ipCnoG Alert-quomwu-0 biTsD"
      role="alert"
    >
      <div
        class="Box-xda4ls-0 hoMyit"
      >
        Warning alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Alert With a close button 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 jKA-DXi Alert-quomwu-0 biTsD"
      role="alert"
    >
      <div
        class="Box-xda4ls-0 hoMyit"
      >
        Warning alert
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg"
      >
        <button
          aria-label="Close"
          class="Link-sc-1fcpbo4-0 jnEOQT"
          color="darkGrey"
          font-size="medium"
        >
          <svg
            aria-hidden="true"
            class="Icon-sc-150w9kl-0 kAZJys nds-icon--close"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Alert With a link 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 jKA-DXi Alert-quomwu-0 biTsD"
      role="alert"
    >
      <div
        class="Box-xda4ls-0 hoMyit"
      >
        An alert with 
        <a
          class="Link-sc-1fcpbo4-0 dTHbTj"
          color="blue"
          font-size="medium"
          href="/"
        >
          linked details
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Alert With a title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 fjJeBB Alert-quomwu-0 biTsD"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 ueLpv nds-icon--error"
        fill="#cc1439"
        focusable="false"
        height="24px"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="Box-xda4ls-0 hoMyit"
      >
        <p
          class="Text-sc-15glbbx-0 bBrSaL"
          color="currentColor"
          font-size="medium"
          font-weight="bold"
        >
          Danger title!
        </p>
        Danger alert
      </div>
    </div>
  </div>
</div>
`;
